<resources>
    <string name="app_name">Quiz App</string>
    <string name="Welcome">Welcome</string>
    <string name="input_name_placeholder">Please enter your name</string>
    <string name="input_name_hint">Name</string>
    <string name="start_button">START</string>
    <string name="questionViewPlaceholder">What Country does this flag belong to ?</string>
    <string name="flagsImageViewDescription">Flags Description</string>
    <string name="check_answer">Check</string>
    <string name="congrats">Hey, Congratulations</string>
    <string name="finish">FINISH</string>
    <string name="result">Result</string>
    <string name="image">image</string>
</resources>