<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultActivity"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/trophy"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:src="@drawable/trophy"
        />
    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/congrats"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/result_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Username"
        />
    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="28sp"
        tools:text="Your scored 9 out of 10"
        />
    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/finish"
        android:textColor="@color/amber"
        android:textSize="18sp"
        android:textStyle="bold"
        />
</LinearLayout>